# Entrega-1

./: .gitignore  README.md  analisis_exploratorio.py  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
orchestation/: train_model.py
src/deployment/: predicts.py
src/orchestation/: tasks.py
