[project]
name = "analisis-exploratorio-inmobiliario"
version = "0.1.0"
description = "Análisis exploratorio de datos inmobiliarios"
authors = [
    { name = "Milan5840, "MRA9811", "pau1967" }
]
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.1.0"
numpy = "^1.24.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
scipy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
readme = "README.md"