[project]
name = "analisis-exploratorio-inmobiliario"
version = "0.1.0"
description = "Análisis exploratorio de datos inmobiliarios"
readme = "README.md"
authors = [
    { name = "Milan5840"},
    { name = "MRA9811"},
    { name = "pau1967"}
]
requires-python = ">=3.11.14"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mlflow>=3.2.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "prefect>=3.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]

[tool.uv.workspace]
members = [
    "06-deployment/deploy/batch-deploy",
]

